# viewfx

./: .gitignore  README.md  package.json  preload.js  research.md  tailwind.config.js  viewvfx_bitmap.js
Tauri/: .gitignore  README.md  TOBE_FIX.md  package-lock.json  package.json  research.md  tailwind.config.js
Tauri/src/: App.svelte  FPS.svelte  UpperSection.svelte  VideoCanvas.svelte  VideoControlArea.svelte  bar.svelte  stores.js  worker-builder.js  worker.js
Tauri/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
Tauri/src-tauri/ffmpeg/: build-linux.sh  build-mac.sh
Tauri/src-tauri/src/: main.rs  viewvid.rs
Tauri/src/MediaCache/: mediaCache.js
Tauri/src/Modal/: LoadFileModal.svelte  StdModalContainer.svelte
Tauri/src/Modal/Buttons/: CloseButton.svelte  StdSquareButton.svelte
Tauri/src/Notifications/: theme01.js
Tauri/src/Playback/: FpsInput.svelte  barHandle.svelte
Tauri/src/Playback/Bar/: CacheBarUnit.svelte
Tauri/src/Playback/Buttons/: PlayButton.svelte  StdButton01.svelte
Tauri/src/SettingsWin/: SettingBoolInput.svelte  SettingNumInput.svelte  SettingsWin.svelte
Tauri/src/UpperSide/Buttons/: UpButtonText.svelte  UpStdButton.svelte  UpStdButtonTwoIco.svelte
Tauri/src/dirFunctions/: quickAccess.js
Tauri/src/workers/: cacheWorker.js  worker-builder.js
Tests/ffmpeg-pipe-test/: .gitignore  Cargo.toml  README.md
Tests/ffmpeg-pipe-test/src/: main.rs
Tests/gstream-test/: Cargo.toml
Tests/gstream-test/src/: gst_common.rs  main.rs
docs/: download.html  index.html  style.css
electron/: .gitignore  README.md  gpuTest.js  index.html  main.js  package.json  preload.js  viewfx.js  viewfx_v02.js  viewvfx_bitmap.js
src/: Canvas.svelte  VideoCanvas.svelte  VideoControlArea.svelte  abSeparator.svelte  bar.svelte  stores.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/ffmpeg/: build-mac.sh  build-win.bat
src-tauri/icons/: icon.icns
src-tauri/src/: viewhash.rs  viewos.rs  viewvid.rs
src/Modal/: StdModalContainer.svelte
src/Modal/Buttons/: StdSquareButton.svelte
src/Playback/Bar/: CacheBarUnit.svelte
src/Playback/Buttons/: StdButton01.svelte
src/SettingsWin/: SettingBoolInput.svelte  SettingsWin.svelte
src/UpperSide/: EmptySpace01.svelte
src/UpperSide/Buttons/: UpStdButtonTwoIco.svelte
src/Workers/: cacheWorker.js
