[package]
name = "app"
version = "0.0.1"
description = "A Tauri App"
authors = ["Ricardo J Marques Montilla"]
license = "TBD"
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.3", features = ["fs-read-dir", "fs-read-file", "fs-write-file", "path-all", "process-command-api", "shell-sidecar"] }
image = "0.24.2"
tokio = { version = "1.18.2", features = ["full"] }
axum = "0.5.6"
tower-http = { version = "0.3.3", features = ["cors", "auth"] }
tower = "0.4.13"
http = "0.2.8"
regex = "1"
rand = "0.8.5"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
