[package]
name = "gstream-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#gstreamer = "0.18.8"
#some-crate = { version = "1.0", registry = "my-registry" }
gst = { version = "0.18.8", package = "gstreamer" }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"

#[[bin]]
#name = "playbin"